--- a/src/App.css
+++ b/src/App.css
@@ -111,36 +111,93 @@ footer {
 .social-media h3, .contact-info h3 {
   font-size: 1.5em;
 }
-
 .city-cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px; 
-  justify-content: space-between; 
-  
+  gap: 20px;
+  justify-content: space-between;
 }
 
 .city-card {
-  flex: 0 1 calc(20% - 20px); 
+  flex: 0 1 calc(24% - 10px);
   margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  overflow: hidden; 
-  transition: transform 0.2s ease, box-shadow 0.2s ease; 
+  border: 2px solid #3498db;
+  border-radius: 12px;
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .city-card:hover {
-  transform: scale(1.1); 
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); 
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  background-color: #f0f0f0;
 }
 
 .city-card img {
   width: 100%;
-  height: 100%;
-  object-fit: cover; 
-  transition: transform 0.2s ease; 
+  height: 200px;
+  object-fit: cover;
+  border-bottom: 2px solid #3498db;
+  transition: transform 0.3s ease;
 }
 
 .city-card:hover img {
-  transform: scale(0.9); 
+  transform: scale(1);
 }
+
+.city-card-title {
+  padding: 10px;
+  font-weight: bold;
+  font-size: 18px;
+  color: #333;
+}
+
+.city-card-description {
+  padding: 10px;
+  font-size: 14px;
+  color: #666;
+}
+
+.country-selector select {
+  width: 50%;
+  padding: 10px;
+  border: 2px solid #3498db;
+  border-radius: 5px;
+  font-size: 16px;
+  background-color: #f0f0f0;
+  color: #333;
+  outline: none;
+  transition: border-color 0.3s ease;
+}
+
+
+.country-selector select option {
+  font-size: 14px;
+  background-color: #fff;
+  color: #333;
+}
+
+.country-selector select::-ms-expand {
+  display: none;
+}
+
+
+.country-selector h2 {
+  font-size: 18px;
+  font-weight: bold;
+  color: #3498db;
+  margin-bottom: 10px;
+}
+
+.country-selector select:focus {
+  border-color: #3498db; 
+}
+
+.cities{
+  font-size: 18px;
+  font-weight: bold;
+  color: #12344a;
+  margin-bottom: 10px;
+}
+
+
